# herdmind-simulator

./: .gitignore  HerdmindSimulator.pro  Makefile  Readme.md  animal.cpp  animal.h  animal_names.cpp  api_rest.cpp  api_rest.h  apimqtt.cpp  apimqtt.h  apirest.cpp  apirest.h  apirest_response.cpp  bolus_chirpstack.js  collar_chirpstack.js  curl.txt  defines.h  defines_settings.h  deploy.sh  devmanager.cpp  devmanager.h  dialogconsole.cpp  dialogconsole.h  dialogconsole.ui  dialogdevicemsg.cpp  dialogdevicemsg.h  dialogdevicemsg.ui  focusanim.cpp  focusanim.h  focusanim.ui  grpc.cpp  grpc.h  herd.cpp  herd.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  meadow.cpp  (+20 more)
.qtcreator/: HerdmindSimulator.pro.user.aad3512
Server/: Server.pro  animalserver.cpp  animalserver.h  main.cpp  socketserver.cpp  socketserver.h
bolus/: bolus.cpp  bolus.h  defines.h
chirpstack-docker/: docker-compose.yml
collar/: collar.cpp  collar.h
deploy_cmake/: CMakeLists.txt
hardware/: defines.h  loradev.cpp  loradev.h  loradev_def.h  netnode.cpp  netnode.h  protocol.cpp  protocol.h  tools.cpp  tools.h
hardware/bolus/: accel.cpp  accel.h  bolus.cpp  bolus.h  extern.h  includes.h
hardware/collar/: collar.cpp  collar.h
hardware/gateway/: gateway.cpp  (+1 more)
herdmind-storage/: .gitignore  apirest.cpp  apirest.h  console_reader.cpp  console_reader.h  defines.h  herdmind-storage.pro  luaman.cpp  luaman.h  luaman_register.cpp  main.cpp  mqtt.cpp  mqtt.h  storage.cpp  storage.h  tools.cpp  tools.h
res/: environment.ini  res.qrc  settings.ini  settings_external.ini
server/: server.h
(+11 files in other folders)
